[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tollbooth-authority-newengland"
version = "0.2.0"
description = "Tollbooth Authority New England — sub-regional certifier under Tollbooth-Authority-NorthAmerica"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
authors = [{ name = "Lonnie VanZandt" }]

dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "tollbooth-dpyc[nostr]==0.19.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tollbooth_authority"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
